RESOLVED FIXED160188
Database Process: ASSERTION FAILED: paths.size() == handles.size() with SANDBOX_EXTENSIONS disabled
https://bugs.webkit.org/show_bug.cgi?id=160188
Summary Database Process: ASSERTION FAILED: paths.size() == handles.size() with SANDB...
Carlos Garcia Campos
Reported 2016-07-25 23:49:13 PDT
This happens in ports with sandbox extensions disabled, and it's making several tests to crash in debug builds. The SandboxExtension implementation is empty in case of building with sandbox extensions disabled, so that we are actually allocating no extensions at all in NetworkProcessProxy::grantSandboxExtensionsToDatabaseProcessForBlobs(). When the message arrives to database process, we have a list of paths, but an empty list of hanldes which causes the assertion. We can just avoid that message entirely in case of building without sandbox extensions.
Attachments
Patch (5.48 KB, patch)
2016-07-25 23:54 PDT, Carlos Garcia Campos
svillar: review+
Carlos Garcia Campos
Comment 1 2016-07-25 23:54:02 PDT
Brady Eidson
Comment 2 2016-07-28 06:19:52 PDT
Yup looks good.
Carlos Garcia Campos
Comment 3 2016-07-28 22:17:27 PDT
Note You need to log in before you can comment on or make changes to this bug.